--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- About Me -->
     <section id="about-me" class="container" >
       <div>
-        <img src="../singlepagewebsite/html_finalprojimages/nintendo-7389576_1280.png" class="profile_image"/>
+        <img src="html_finalprojimages/nintendo-7389576_1280.png" class="profile_image"/>
       </div>
 
       <div>
